# qstrip

./: .gitignore  README.md  pyproject.toml  pytest.ini  setup.py
.github/workflows/: python-package.yml  python-publish.yml
qstrip/_core/: markdown.c
src/_core/: markdown.c
src/qstrip/: __init__.py  __main__.py
tests/: stresstest.py  test_markdown.py
tests/assets/: long.md  medium.md  short.md
tests/assets/stripped/: long.txt  medium.txt  short.txt
